# dmg-research

./: .gitignore  README.md  pyproject.toml  requirements.txt  tmp.md  train_causal_dpl.py  train_kge_baseline.py
conf/: config_irm_dhbv.yaml  config_kge_dhbv.yaml  config_lstm.yaml  config_vrex_dhbv.yaml
docs/: mc_mlp_interface.md  mc_parameter_correlation_analysis.md  results.md
docs/innerflux/notebook/: calculate_bfi_2.py  calculate_runoff_ratio.ipynb  eval_hydro_feature.ipynb
implements/: __init__.py  baseline_trainer.py  basin_utils.py  causal_dpl_model.py  causal_trainer.py  gnann_splitter.py  hbv_static.py  hybrid_nse_batch_loss.py  irm_kge_loss.py  log_nse_batch_loss.py  param_learn_trainer.py  vrex_kge_loss.py
models/: hbv_static.py
models/nns/: fast_kan.py  mc_mlp.py
project/Invariant/: aggregate_holdout_results.py  export_mc_basin_parameters.py  test_kge_baseline.py  train_causal_dpl.py
project/Invariant/scripts/: run_test_causal_dpl.sh  run_test_kge_dhbv.sh  run_vrex_dhbv.sh
project/Invariant_dpl/: analyze_mc_parameter_correlation.py  export_mc_basin_parameters.py  test_causal_dpl.py  train_kge_baseline.py
project/Invariant_dpl/scripts/: run_kge_dhbv.sh
project/bettermodel/: __init__.py  local_model_handler.py  model_builder.py  run_experiment.py  run_pub_experiment.py
project/parameterize/: __init__.py  analyze_param_results.py  analyze_seed_stability.py  paper_variants.py  plot.md  runtime_overrides.py  train_dmotpy.py  train_param_learn.py  train_param_paper.py
scripts/: run_causal_dhbv.sh  run_vrex_dhbv.sh
(+319 files in other folders)
